--- a/.github/workflows/front-ci.yml
+++ b/.github/workflows/front-ci.yml
@@ -24,6 +24,7 @@ jobs:
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
           ${{ runner.os }}-node-
+          
     - name: Install Dependencies
       if: steps.cache.outputs.cache-hit != 'true'
       run: |
@@ -36,7 +37,8 @@ jobs:
     - name: Real Test
       run: |
         npm run test:unit
-
+        
+    # 토큰 설정만 하면된다
     - name: send CI_TEST_FINISH_TRIGGER
       run: |
         curl -X POST https://api.github.com/repos/${{ github.repository }}/dispatches \
